--- a/package.json
+++ b/package.json
@@ -1,21 +1,1 @@
-{
-  "name": "ai-nutritionist-&-coach",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "@google/genai": "^1.15.0"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
-  }
-}
+{ "name": "ai-nutritionist-&-coach", "private": true, "version": "0.0.0", "type": "module", "homepage": "https://anouar04.github.io/nutri", "scripts": { "dev": "vite", "build": "vite build", "preview": "vite preview", "predeploy": "npm run build", "deploy": "gh-pages -d dist" }, "dependencies": { "react": "^19.1.1", "react-dom": "^19.1.1", "@google/genai": "^1.15.0" }, "devDependencies": { "@types/node": "^22.14.0", "typescript": "~5.8.2", "vite": "^6.2.0", "gh-pages": "^6.0.0" } }
